--- a/src/about.html
+++ b/src/about.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about</title>
+    @@include('layout/meta.html', {
+        "title": "關於我們"
+      })
 </head>
 <body>
-    
+    @@include('layout/header.html')
+    <div class="wrapper">
+       <section>
+          <h3>關於我們內容</h3>
+       </section>
+    </div>
+    @@include('layout/footer.html')
 </body>
 </html>
