--- a/src/product.html
+++ b/src/product.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     @@include('layout/meta.html', {
-      "title": "首頁"
+      "title": "產品業"
     })
 </head>
 <body>
    @@include('layout/header.html')
    <div class="wrapper">
       <section>
-         <h3>首頁內容</h3>
+         <h3>產品頁內容</h3>
       </section>
    </div>
    @@include('layout/footer.html')
