--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
     <title>index</title>
 </head>
 <body>
-   <div class="wrapper">
+   <div class="wrapper index">
      <nav>
          <div class="logo">logo</div>
          <ul>
-            <li>item</li>
-            <li>item</li>
+            <li><a href="index.html">index</a></li>
+            <li><a href="about.html">about</a></li>
             <li>item</li>
             <li>item</li>
             <li>item</li>
          </ul>
      </nav>
+     <section>
+       <h1>index</h1>
+
+     </section>
    </div>
 
     
