--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
      <section>
        <h1>index</h1>
        <div class="btn">send message</div>
-
+       <div class="box-1"></div>
+       <div class="box-2"></div>
+       <div class="box-3"></div>
      </section>
    </div>
 
