--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          </ul>
      </nav>
      <section>
-       <h1>index</h1>
+       <h1 class="push-9">index</h1>
        <div class="btn">send message</div>
        <div class="box-1"></div>
        <div class="box-2"></div>
