add bg color  each

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      <section>
        <h1 class="push-9">index</h1>
        <div class="btn">send message</div>
-       <div class="box-1"></div>
+       <div class="box-1 bg-primary">info</div>
        <div class="box-2"></div>
        <div class="box-3"></div>
      </section>
