--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
          </ul>
      </nav>
      <section>
+      <h1>首頁標題</h1>
        <h1 class="push-9">index</h1>
        <div class="btn">send message</div>
        <div class="box-1 bg-primary">info</div>
-       <div class="box-2"></div>
+       <div class="box-2 border-primary">primary</div>
        <div class="box-3"></div>
      </section>
    </div>
