--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 </head>
 <body>
    <div class="wrapper index">
-     <nav>
-         <div class="logo">logo</div>
-         <ul>
-            <li><a href="index.html">index</a></li>
-            <li><a href="about.html">about</a></li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-         </ul>
-     </nav>
+    <header>
+      <nav>
+        <div class="logo">logo</div>
+        <ul>
+           <li><a href="index.html">index</a></li>
+           <li><a href="about.html">about</a></li>
+           <li>item</li>
+           <li>item</li>
+           <li>item</li>
+        </ul>
+    </nav>
+    </header>
+ 
      <section>
       <h1>首頁標題</h1>
        <h1 class="push-9">index</h1>
