modify btn modules

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
        <div class="box-1 bg-primary">info</div>
        <div class="box-2 border-primary">primary</div>
        <div class="box-3"></div>
+       <div class="btn-primary"> primary</div>
+
      </section>
    </div>
 
