--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,12 @@
     @@include('layout/meta.html', {
       "title": "首頁"
     })
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-   @@include('layout/header.html')
+  
    <div class="wrapper">
+      @@include('layout/header.html')
       <section>
          <h3>首頁內容</h3>
       </section>
