--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   
    <div class="wrapper">
       @@include('layout/header.html')
+      @@include('layout/index/section01.html')
+      @@include('layout/index/section02.html')
       <section>
          <h3>首頁內容</h3>
       </section>
