--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 </head>
 <body>
     <div class="box"></div>
-    <script src="dist/main.js"></script>
+    <script src="dist/app.js"></script>
 </body>
 </html>
