--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
 
     </style>
+    <script src="dist/app.js" async></script>
     <title>Document</title>
 </head>
 <body>
     <div class="box"></div>
-    <script src="dist/app.js"></script>
+    
 </body>
 </html>
