--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
+    <header><h1>header</h1></header>
     <div class="box"></div>
-    
+    <footer><h1>footer</h1></footer>
 </body>
 </html>
