--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="dist/app.js" async></script>
+    <link rel="stylesheet" href="dist/style.css">
     <title>Document</title>
 </head>
 <body>
